GpMessages/85757543067000
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 23:17:22</msg><msg code="-2147467259" type="100">  File "C:\Users\juaco\OneDrive\Documentos\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_JBV_d59d9f\p30\dag_1s2024_l_trabajo_1_parte_2_jbv.gdb\CARTOFINAL.py", line 27
    ID" true true false 4 Long 0 0,First,#,hiuhiuh,DIST_RH_FID,-1,-1;DIST_RH "DIST_RH" true true false 8 Double 0 0,First,#,hiuhiuh,DIST_RH,-1,-1;INDICE_RIESGO "INDICE_RIESGO" true true false 8 Double 0 0,First,#,hiuhiuh,INDICE_RIESGO,-1,-1', sort_field=None)
                                                                                                                                                                                                                                                                   ^
SyntaxError: positional argument follows keyword argument
</msg><msg code="0" type="0">Failed script 6.1..- EXPORTACION Y DESPLIEGUE DE CAPA...</msg><msg code="-2147467259" type="100">Failed to execute (CARTO).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 23:17:24 (Elapsed Time: 1.13 seconds)</msg></messages>